chore : 게시글 CSS 수정

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -8,3 +8,10 @@
   font-family: Arial, Helvetica, sans-serif !important;
   color: #333 !important;
 }
+.ql-snow {
+  border: 0px !important;
+}
+
+.ql-toolbar {
+  border-bottom: 1px solid #e5e7eb !important;
+}
