--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,6 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
+
+@layer base {
+  html {
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+}
+
+#navigator {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
 
 .ql-container {
   font-size: 1.2rem !important;
@@ -18,4 +31,5 @@
 
 .ql-container {
   height: 90% !important;
+  font-family: 'Noto Sans KR', sans-serif !important;
 }
