--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -14,7 +14,11 @@
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
-
+#postContent {
+  .ql-editor {
+    padding: 0px !important;
+  }
+}
 .ql-container {
   font-size: 1.2rem !important;
   border: 0px !important;
