--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -39,28 +39,35 @@
 }
 
 .ql-editor {
-  font-size: 1.1rem !important;
+  font-size: 1.2rem !important;
   font-weight: 500;
   line-height: 1.7;
 
   > h1 {
-    font-size: 2rem !important;
-    font-weight: 600;
+    font-size: 2.25rem !important;
+    font-weight: 800;
     line-height: 2.5;
   }
   > h2 {
-    font-size: 1.6rem !important;
-    font-weight: 600;
+    font-size: 2rem !important;
+    font-weight: 800;
     line-height: 2.5;
   }
   > h3 {
-    font-size: 1.4rem !important;
-    font-weight: 600;
+    font-size: 1.6rem !important;
+    font-weight: 800;
+    line-height: 2.5;
+  }
+  > h4 {
+    font-size: 1.2rem !important;
+    font-weight: 800;
     line-height: 2.5;
   }
   > blockquote {
     font-size: 1.2rem !important;
     font-weight: 500;
     margin-bottom: 24px !important;
+    background-color: #f8fafc;
+    padding: 0.8rem 1.5rem !important;
   }
 }
