--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -14,10 +14,8 @@
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
-#postContent {
-  .ql-editor {
-    padding: 0px !important;
-  }
+#postContent > .ql-editor {
+  padding: 0px !important;
 }
 .ql-container {
   font-size: 1.2rem !important;
@@ -42,32 +40,36 @@
   font-size: 1.2rem !important;
   font-weight: 500;
   line-height: 1.7;
+}
 
-  > h1 {
-    font-size: 2.25rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-  > h2 {
-    font-size: 2rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-  > h3 {
-    font-size: 1.6rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-  > h4 {
-    font-size: 1.2rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-  > blockquote {
-    font-size: 1.2rem !important;
-    font-weight: 500;
-    margin-bottom: 24px !important;
-    background-color: #f8fafc;
-    padding: 0.8rem 1.5rem !important;
-  }
+.ql-editor > h1 {
+  font-size: 2.25rem !important;
+  font-weight: 700;
+  line-height: 2.5;
+}
+
+.ql-editor > h2 {
+  font-size: 2rem !important;
+  font-weight: 700;
+  line-height: 2.5;
+}
+
+.ql-editor > h3 {
+  font-size: 1.6rem !important;
+  font-weight: 700;
+  line-height: 2.5;
+}
+
+.ql-editor > h4 {
+  font-size: 1.2rem !important;
+  font-weight: 700;
+  line-height: 2.5;
+}
+
+.ql-editor > blockquote {
+  font-size: 1.2rem !important;
+  font-weight: 500;
+  margin-bottom: 24px !important;
+  background-color: #f8fafc;
+  padding: 0.8rem 1.5rem !important;
 }
