--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -15,83 +15,51 @@
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
-/* #postContent > .ql-editor {
-  padding: 0px !important;
-}
-.ql-container {
-  font-size: 1.2rem !important;
-  border: 0px !important;
-  font-family: Arial, Helvetica, sans-serif !important;
-  color: #333 !important;
-}
-.ql-snow {
-  border: 0px !important;
-}
-
-.ql-toolbar {
-  border-bottom: 1px solid #e5e7eb !important;
-}
-
-.ql-container {
-  height: 90% !important;
-  font-family: 'Noto Sans KR', sans-serif !important;
-}
-
-.ql-editor {
-  font-size: 1.2rem !important;
-  font-weight: 500;
-  line-height: 1.7;
-}
-
-.ql-editor > h1 {
-  font-size: 2.25rem !important;
-  font-weight: 700;
-  line-height: 2.5;
-}
-
-.ql-editor > h2 {
-  font-size: 2rem !important;
-  font-weight: 700;
-  line-height: 2.5;
-}
-
-.ql-editor > h3 {
-  font-size: 1.6rem !important;
-  font-weight: 700;
-  line-height: 2.5;
-}
-
-.ql-editor > h4 {
-  font-size: 1.2rem !important;
-  font-weight: 700;
-  line-height: 2.5;
-}
-
-.ql-editor > blockquote {
-  font-size: 1.2rem !important;
-  font-weight: 500;
-  margin-bottom: 24px !important;
-  background-color: #f8fafc;
-  padding: 0.8rem 1.5rem !important;
-} */
 
 #tiptap {
+  line-height: 2;
   > * + * {
     margin-top: 0.75em;
   }
-
   ul,
   ol {
     padding: 0 1rem;
+    list-style-type: disc;
+  }
+  h1 {
+    font-size: 2.25rem !important;
+    font-weight: 700;
+    line-height: 2.5;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
+  h2 {
+    font-size: 2rem !important;
+    font-weight: 700;
+    line-height: 2.5;
+  }
+
+  h3 {
+    font-size: 1.6rem !important;
+    font-weight: 700;
+    line-height: 2.5;
+  }
+
+  h4 {
+    font-size: 1.2rem !important;
+    font-weight: 700;
+    line-height: 2.5;
+  }
+
+  h5 {
+    font-size: 1.2rem !important;
+    font-weight: 700;
+    line-height: 2.5;
+  }
+
   h6 {
-    line-height: 1.1;
+    font-size: 1.2rem !important;
+    font-weight: 700;
+    line-height: 2.5;
   }
 
   code {
@@ -124,7 +92,16 @@
   }
 
   blockquote {
+    margin: 1rem 3rem;
+    padding: 0.5rem 0;
     padding-left: 1rem;
-    border-left: 2px solid rgba(#0d0d0d, 0.1);
+    border-left: 0.4rem solid #efefef;
+    background-color: #f9f9f9;
+  }
+
+  hr {
+    border: none;
+    border-top: 2px solid #616161;
+    margin: 2rem 0;
   }
 }
