--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import 'tiptap.css';
 
 @tailwind base;
 @tailwind components;
@@ -14,103 +15,4 @@
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
-#tiptap,
-#tiptap-board {
-  line-height: 2;
-  overflow: scroll;
-
-  :focus {
-    outline: none;
-  }
-  > * + * {
-    margin-top: 0.75em;
-  }
-  ul,
-  ol {
-    padding: 0 1rem;
-    list-style-type: disc;
-  }
-  ol {
-    list-style-type: decimal;
-  }
-  h1 {
-    font-size: 2.25rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-
-  h2 {
-    font-size: 2rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-
-  h3 {
-    font-size: 1.6rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-
-  h4 {
-    font-size: 1.2rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-
-  h5 {
-    font-size: 1.2rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-
-  h6 {
-    font-size: 1.2rem !important;
-    font-weight: 700;
-    line-height: 2.5;
-  }
-
-  code {
-    background-color: #efefef;
-    color: #616161;
-  }
-
-  pre {
-    background: #0d0d0d;
-    color: #fff;
-    font-family: 'JetBrainsMono', monospace;
-    padding: 0.75rem 1rem;
-    border-radius: 0.5rem;
-
-    code {
-      color: inherit;
-      padding: 0;
-      background: none;
-      font-size: 0.8rem;
-    }
-  }
-
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  blockquote {
-    margin: 1rem;
-    padding: 0.5rem 0;
-    padding-left: 1rem;
-    border-left: 0.4rem solid #efefef;
-    background-color: #f9f9f9;
-  }
-
-  hr {
-    border: none;
-    border-top: 2px solid #e5e5e5;
-    margin: 2rem 0;
-  }
-}
-#tiptap {
-  height: 60vh;
-  padding: 1rem 2rem;
 }
