fix: tiptap board 스크롤 UI 버그 삭제

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -16,3 +16,7 @@
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+#tiptap-board::-webkit-scrollbar {
+  display: none;
+}
