--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import 'tiptap.css';
 
 @tailwind base;
@@ -11,10 +10,9 @@
   }
 }
 
-#navigator {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+@font-face {
+  font-family: 'Pilseung_Gothic';
+  src: url('fonts/Pilseung_Gothic.otf');
 }
 
 #tiptap-board::-webkit-scrollbar {
