--- a/client/src/styles/tiptap.css
+++ b/client/src/styles/tiptap.css
@@ -154,3 +154,15 @@
   height: 60vh;
   padding: 1rem 2rem;
 }
+
+#tiptap-comment {
+  outline: none;
+}
+
+.tiptap .is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
